--- a/asteroids.html
+++ b/asteroids.html
@@ -5,10 +5,13 @@
 </head>
 <body>
     <canvas width="300" height="300"></canvas>
-
+    <script src="keymaster.js"></script>
     <script src="moveClass.js"></script>
     <script src="asteroid.js"></script>
+    <script src="ship.js"></script>
     <script src="game.js"></script>
+
+
     <script>
         var canvas = document.getElementsByTagName("canvas")[0];
         var game = new Asteroids.Game(canvas);
